--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "start": "node server.js",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
+    "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
+    "express": "^5.1.0",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "stream-browserify": "^3.0.0",
