--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start-dev": "./start-dev.sh",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test-wallet": "node test-wallet-generation.js"
+    "test-wallet": "node test-wallet-generation.js",
+    "gen-wallet": "node local-wallet-test.js"
   },
   "dependencies": {
     "assert": "^2.1.0",
@@ -24,7 +25,7 @@
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "xrpl": "^2.12.0"
+    "xrpl": "^2.14.1"
   },
   "devDependencies": {
     "@types/react": "^18",
