--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,30 +8,38 @@
     "start-dev": "./start-dev.sh",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test-wallet": "node test-wallet-generation.js",
-    "gen-wallet": "node local-wallet-test.js"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:basic": "node tests/basic-test.js"
   },
   "dependencies": {
     "assert": "^2.1.0",
+    "axios": "^1.6.5",
     "buffer": "^6.0.3",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "node-fetch": "^2.6.7",
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
+    "ripple-keypairs": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "vite-plugin-node-polyfills": "^0.23.0",
     "xrpl": "^2.14.1"
   },
   "devDependencies": {
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.0",
+    "axios-mock-adapter": "^1.22.0",
+    "msw": "^2.0.14",
+    "supertest": "^6.3.4",
     "typescript": "^5.0.0",
-    "vite": "^5"
+    "vite": "^5",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vitest": "^1.1.0"
   }
 }
